sweet update timer function

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<p id="demo"></p>
 	<div id="timer">
-		<button id="timerDown" class="btn" onclick="adjustTimer(this)">-</button>
+		<button id="timerDown" class="btn" onclick="adjustTimer(this.id)">-</button>
 		<div id="timerText">25:00</div>
-		<button id="timerUp" class="btn" onclick="adjustTimer()">+</button>
+		<button id="timerUp" class="btn" onclick="adjustTimer(this.id)">+</button>
 	</div>
 
 
